fix word overflow and increase the width of the sidebar in css

--- a/assets/css/customstyles.css
+++ b/assets/css/customstyles.css
@@ -447,7 +447,8 @@ ul#mysidebar {
 }
 
 .nav ul li ul li a {
-    padding-left:40px;
+    padding-left: 20px;
+    overflow-wrap: break-word;
 }
 
 .nav li.thirdlevel > a {
@@ -925,7 +926,7 @@ span.soft {
 @media (min-width: 1000px) {
 
     ul#mysidebar {
-        width: 225px;
+        width: 250px;
     }
 }
 
